TL-10428 appraisal: Stops 'visibleto' text clashing with field text and other participants details.
Reviewed-on: https://review.totaralms.com/12662
Tested-by: Jenkins Automation <jenkins@totaralms.com>

--- a/totara/appraisal/less/legacy.less
+++ b/totara/appraisal/less/legacy.less
@@ -367,35 +367,6 @@ textarea.appraisal-event-body {
   display: block;
 }
 
-#appraisalanswers1 div.fcontainer {
-  position: relative;
-  margin: 0;
-}
-
-.dir-ltr #appraisalanswers1 div.fcontainer {
-  padding-left: 40px;
-}
-
-.dir-rtl #appraisalanswers1 div.fcontainer {
-  padding-right: 40px;
-}
-
-#appraisalanswers1 div.fcontainer > a {
-  height: 0;
-  position: relative;
-  top: 5px;
-}
-
-.dir-ltr #appraisalanswers1 div.fcontainer > a {
-  float: left;
-  left: -40px;
-}
-
-.dir-rtl #appraisalanswers1 div.fcontainer > a {
-  float: right;
-  right: -40px;
-}
-
 #appraisalanswers1 div.fcontainer > div.fitem {
   min-height: 35px;
 }
